# steno

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Trunk.toml  index.html  rust-toolchain.toml
.github/workflows/: ci.yaml  deploy.yml
assets/dictionaries/: en.txt
script/: ci.sh  google-ngram.rs
src/: assets.rs  content_view.rs  counter.rs  cursor.rs  dictionary.rs  main.rs  text_view.rs  theme.rs  titlebar.rs  window.rs
src/components/: button.rs  clamp.rs  continuous_animation.rs  line_chart.rs  mod.rs
static/: coi-serviceworker.js
