[package]
name = "steno"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland", "x11"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["wayland", "x11"] }
rand = "0.9.0"
rust-embed = "8.5.0"
smol = "2.0.2"
