[package]
name = "steno"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
rust-embed = { version = "8.5.0", features = ["debug-embed", "include-exclude"] }
web-time = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gpui = { git = "https://github.com/someone13574/zed", branch = "web-resizing", features = ["wayland", "x11"] }
gpui_platform = { git = "https://github.com/someone13574/zed", branch = "web-resizing", features = ["wayland", "x11"] }

[target.'cfg(target_family = "wasm")'.dependencies]
gpui = { git = "https://github.com/someone13574/zed", branch = "web-resizing", default-features = false }
gpui_platform = { git = "https://github.com/someone13574/zed", branch = "web-resizing" }
wasm-bindgen = "0.2"
